<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--Main Activity strings-->
    <string name="app_name">European Capitals Quiz</string>
    <string name="wellcome">European Capitals Quiz</string>
    <string name="name_input">Please fill in your name!</string>
    <string name="hint">Name</string>
    <string name="please_select">Plese select your location!</string>
    <string name="spinner">Choose the continent that you live on</string>


    <!--Activity Basic Quiz strings-->
    <string name="smallest_state">What\'s the name of the smallest country in Europe?</string>
    <string name="true_statement">Which of the following statements are true?</string>
    <string name="wine">Europe Makes 44% of the World\’s Wine</string>
    <string name="empires">World War I Ended Four European Empires</string>
    <string name="civilisation">Europe Gave Birth to Western Civilization</string>
    <string name="name">The Name Europe Comes from Latin</string>
    <string name="capital_for_albania">What\'s the capital of Albania?</string>
    <string name="albania_answer_1">Zagreb</string>
    <string name="albania_answer_2">Tirana</string>
    <string name="albania_answer_3">Tibilisi</string>
    <string name="capital_for_iceland">What\'s the capital of Iceland?</string>
    <string name="iceland_answer_1">Stockholm</string>
    <string name="iceland_answer_2">Helsinki</string>
    <string name="iceland_answer_3">Reykjavik</string>
    <string name="capital_for_slovakia">What\'s the capital for Slovakia?</string>
    <string name="slovakia_answer_1">Bratislava</string>
    <string name="slovakia_answer_2">Ljubljana</string>
    <string name="slovakia_answer_3">Belgrade</string>
    <string name="answer_c">Answer C</string>

    <!--Quiz Activity Easy strings-->
    <string name="european_parliament">Which capital is home of the European Parlament?</string>
    <string name="christian">Europe Has a Hindu Majority</string>
    <string name="countries">There Are 50 Countries in Europe</string>
    <string name="economy">Europe Has the World\’s Richest Economy</string>
    <string name="smallest">Europe is home to the world\’s smallest country</string>
    <string name="capital_for_france">What is the capital of France?</string>
    <string name="france_answer_1">Paris</string>
    <string name="france_answer_2">Bucharest</string>
    <string name="france_answer_3">Prague</string>
    <string name="capital_for_germany">What is the capital of Germany?</string>
    <string name="germany_answer_1">Dublin</string>
    <string name="germany_answer_2">Berlin</string>
    <string name="germany_answer_3">Rome</string>
    <string name="capital_for_uk">What is the capital of England?</string>
    <string name="uk_answer_1">Athens</string>
    <string name="uk_answer_2">Madrid</string>
    <string name="uk_answer_3">London</string>

    <!--Win & Loose Ativity strings-->
    <string name="win">Congratulation!</string>
    <string name="loser">Better luck next time!</string>
    <string name="restart">Restart</string>

    <!--Button strings-->
    <string name="start">Start quiz</string>
    <string name="submit">Submit</string>

    <!--Toast messages-->
    <string name="heavy_stuff">Since you are a European we\'ll go for the heavy stuff!</string>
    <string name="easy">I\'ll go easy on you!</string>
    <string name="result">On a scale of 1 to 5 you scored: <xliff:g id="finalScore" example="1">%d</xliff:g>!</string>



    <!--Continents-->
    <string name="select">Select</string>
    <string name="cont_eu">Europe</string>
    <string name="world">Rest of the world</string>
    <string name="title_activity_win">WinActivity</string>

    <!--Answers hint-->
    <string name="answer">Please fill your answer here!</string>
    <string name="easy_answer">Brussels </string>
    <string name="basic_answer">Vatican</string>

</resources>
