<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/question_mark_scratching_head"
    tools:context="com.example.vlada.europeancapitalsquiz.EasyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/albania"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_question"
                android:layout_marginTop="@dimen/top_dimen"
                android:text="@string/capital_for_france"
                android:textColor="@color/text"
                android:textSize="@dimen/text" />

            <RadioGroup
                android:id="@+id/albania_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/albania"
                android:layout_marginTop="@dimen/top_dimen">

                <RadioButton
                    android:id="@+id/france_paris"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/france_answer_1"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/france_bucharest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/france_answer_2"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/france_prague"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/france_answer_3"
                    android:textSize="@dimen/text" />
            </RadioGroup>

            <TextView
                android:id="@+id/iceland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/albania_answers"
                android:layout_marginLeft="@dimen/left_question"
                android:layout_marginTop="@dimen/top_dimen"
                android:text="@string/capital_for_germany"
                android:textColor="@color/text"
                android:textSize="@dimen/text" />

            <RadioGroup
                android:id="@+id/iceland_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iceland"
                android:layout_marginTop="@dimen/top_dimen">

                <RadioButton
                    android:id="@+id/germany_dublin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/germany_answer_1"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/germany_berlin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/germany_answer_2"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/germany_rome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/germany_answer_3"
                    android:textSize="@dimen/text" />

            </RadioGroup>

            <TextView
                android:id="@+id/slovakia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iceland_answers"
                android:layout_marginLeft="@dimen/left_question"
                android:layout_marginTop="@dimen/top_dimen"
                android:text="@string/capital_for_uk"
                android:textColor="@color/text"
                android:textSize="@dimen/text" />

            <RadioGroup
                android:id="@+id/uk_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/slovakia"
                android:layout_marginTop="@dimen/top_dimen">

                <RadioButton
                    android:id="@+id/england_athens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/uk_answer_1"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/england_madrid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/uk_answer_2"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/england_london"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/uk_answer_3"
                    android:textSize="@dimen/text" />

            </RadioGroup>

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/bottom_dp"
            android:layout_marginTop="@dimen/top_dp"
            android:onClick="submitAnswers"
            android:text="@string/submit"
            android:textSize="@dimen/text" />


    </LinearLayout>

</ScrollView>
