<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/questions"
    tools:context="com.example.vlada.europeancapitalsquiz.BasicQuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/albania"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_question"
                android:layout_marginTop="@dimen/top_dimen"
                android:text="@string/capital_for_albania"
                android:textColor="@color/text"
                android:textSize="@dimen/text" />

            <RadioGroup
                android:id="@+id/albania_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/albania"
                android:layout_marginTop="@dimen/top_dimen">

                <RadioButton
                    android:id="@+id/albania_zagreb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/albania_answer_1"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/albania_tirana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/albania_answer_2"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/albania_tibilisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/albania_answer_3"
                    android:textSize="@dimen/text" />
            </RadioGroup>

            <TextView
                android:id="@+id/iceland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/albania_answers"
                android:layout_marginLeft="@dimen/left_question"
                android:layout_marginTop="@dimen/top_dimen"
                android:text="@string/capital_for_iceland"
                android:textColor="@color/text"
                android:textSize="@dimen/text" />

            <RadioGroup
                android:id="@+id/iceland_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iceland"
                android:layout_marginTop="@dimen/top_dimen">

                <RadioButton
                    android:id="@+id/iceland_stockholm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/iceland_answer_1"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/iceland_helsinki"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/iceland_answer_2"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/iceland_reykjavik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/iceland_answer_3"
                    android:textSize="@dimen/text" />

            </RadioGroup>

            <TextView
                android:id="@+id/slovakia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iceland_answers"
                android:layout_marginLeft="@dimen/left_question"
                android:layout_marginTop="@dimen/top_dimen"
                android:text="@string/capital_for_slovakia"
                android:textColor="@color/text"
                android:textSize="@dimen/text" />

            <RadioGroup
                android:id="@+id/slovakia_answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/slovakia"
                android:layout_marginTop="@dimen/top_dimen">

                <RadioButton
                    android:id="@+id/slovakia_bratislava"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/slovakia_answer_1"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/slovakia_ljublijana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/slovakia_answer_2"
                    android:textSize="@dimen/text" />

                <RadioButton
                    android:id="@+id/slovakia_belgrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_answer"
                    android:paddingLeft="@dimen/left_question"
                    android:text="@string/slovakia_answer_3"
                    android:textSize="@dimen/text" />

            </RadioGroup>

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/bottom_dp"
            android:layout_marginTop="@dimen/top_dimen"
            android:onClick="submitAnswers"
            android:text="@string/submit"
            android:textSize="@dimen/text" />

    </LinearLayout>

</ScrollView>
